tdf#120122 Fix key input being passed to doc view from floating sidebar

...tab bar

Change-Id: Iae327e0de3a129f28315a3fe2961a6ae572e4056